[gd_scene load_steps=16 format=2]

[ext_resource path="res://Pause/Resume_PressedState.png" type="Texture" id=1]
[ext_resource path="res://Pause/Resume_NormalState.png" type="Texture" id=2]
[ext_resource path="res://Pause/Pause Menu.png" type="Texture" id=3]
[ext_resource path="res://Pause/MainMenu_NormalState.png" type="Texture" id=4]
[ext_resource path="res://Pause/Restart_HoverState.png" type="Texture" id=5]
[ext_resource path="res://Pause/Restart_NormalState.png" type="Texture" id=6]
[ext_resource path="res://Pause/MainMenu_HoverState.png" type="Texture" id=7]
[ext_resource path="res://Pause/Resume_HoverState.png" type="Texture" id=8]
[ext_resource path="res://Pause/MainMenu_PressedState.png" type="Texture" id=9]
[ext_resource path="res://Pause/Restart_PressedState.png" type="Texture" id=10]
[ext_resource path="res://Pause/PauseMenu.gd" type="Script" id=11]
[ext_resource path="res://Pause/Menu.gd" type="Script" id=12]
[ext_resource path="res://SFX/Volume.tscn" type="PackedScene" id=13]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="ShortCut" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 11

[node name="Menu" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 500.0
margin_top = 300.0
margin_right = -500.0
margin_bottom = -200.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="CanvasLayer/Menu/Panel"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu/Panel/Panel2"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -267.5
margin_right = 267.5
grow_horizontal = 2
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="CanvasLayer/Menu/Panel/Panel2/VBoxContainer"]
margin_top = 26.0
margin_right = 535.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 100 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="MainMenu" type="TextureButton" parent="CanvasLayer/Menu/Panel/Panel2/VBoxContainer"]
margin_top = 176.0
margin_right = 535.0
margin_bottom = 276.0
rect_min_size = Vector2( 0, 100 )
shortcut = SubResource( 1 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Restart" type="TextureButton" parent="CanvasLayer/Menu/Panel/Panel2/VBoxContainer"]
margin_top = 326.0
margin_right = 535.0
margin_bottom = 426.0
rect_min_size = Vector2( 0, 100 )
shortcut = SubResource( 1 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Volume" parent="CanvasLayer/Menu/Panel/Panel2/VBoxContainer" instance=ExtResource( 13 )]
margin_top = 476.0
margin_right = 535.0
margin_bottom = 533.0

[connection signal="toggle_visibility" from="." to="CanvasLayer/Menu" method="_on_PauseMenu_toggle_visibility"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel/Panel2/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel/Panel2/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel/Panel2/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
